--- a/Dockerfile.dunfell
+++ b/Dockerfile.dunfell
@@ -2,10 +2,6 @@
 ## Docker file to build a container that compiles
 ## new linux distros using Yocto
 
-# Use this command to run:
-# docker run --rm -it --privileged -v ~/Projects/poky/:/home/yocto/poky -v /tmp:/tmp -v /etc/localtime:/etc/localtime --name yocto -e DISPLAY=$DISPLAY hiagofranco/yocto-builder:latest
-
-
 # Yocto Project 3.1 - dunfell (works with ubuntu 20.04)
 FROM ubuntu:20.04
 ENV DEBIAN_FRONTEND=noninteractive
@@ -63,11 +59,11 @@ ENV LANGUAGE en_US:en
 ENV LC_ALL en_US.UTF-8
 
 # Set user
-ENV USER_NAME yocto 
+ENV USER_NAME dunfell 
 ARG host_uid=1000
 ARG host_gid=1000
 RUN groupadd -g $host_gid $USER_NAME && useradd -g $host_gid -m -s /bin/bash -u $host_uid $USER_NAME
-RUN echo 'yocto:linux' | chpasswd
+RUN echo 'dunfell:linux' | chpasswd
 RUN adduser $USER_NAME sudo
 RUN echo '%sudo ALL=(ALL) NOPASSWD:ALL' >> /etc/sudoers
 USER $USER_NAME
