kirkstone:dunfell: Add dialog package
Signed-off-by: Hiago De Franco <hiagofranco@gmail.com>

--- a/Dockerfile.dunfell
+++ b/Dockerfile.dunfell
@@ -39,17 +39,18 @@ RUN apt-get update && \
     zstd \
     liblz4-tool \
     \
-    vim \
-    locales \
-    sudo \
-    file \
-    ssh \
-    python \
     curl \
+    dialog \
+    file \
     libncurses-dev \
+    locales \
+    python \
+    ripgrep \
+    ssh \
+    sudo \
     tmux \
     tree \
-    ripgrep \
+    vim \
     && rm -rf /var/lib/apt/lists/*
 
 # Set locale and language
